# graphite-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md  annotation_guide.md  dataset_schema.json  sec_cases_pilot.jsonl
benchmark/examples/: example_case.jsonl
benchmark/scripts/: generate_cases.py  sec_seeds.json
docs/: edge_direction.md  embedding_propagation.md  launch_post_draft.md  node_taxonomy.md  open-core-boundary.md
docs/superpowers/plans/: 2026-03-20-100-percent-module-test-coverage.md  2026-03-21-codebase-refactoring.md  2026-03-23-tech-debt-cleanup.md
docs/superpowers/specs/: 2026-03-20-100-percent-module-test-coverage-design.md  2026-03-21-codebase-refactoring-design.md  2026-03-23-tech-debt-cleanup-design.md
evals/: verify_eval.py
examples/ablation/: ablation_results.json
examples/evidence_accumulation/: run.py
examples/flood_replay_demo/: extractor.py  node_geometries.json  output.json  validation.py
examples/flood_replay_demo/documents/: houston_port_impact.txt
examples/forecast_demo/: README.md  beryl_graph.json  extractor.py  forecast_snapshot.json  run.py
examples/forecast_demo/documents/: beryl_nws_report.txt
examples/legacy/ablation/: run_ablation.py
examples/legacy/flood_replay_demo/: README.md  extractor.py  flood_graph.json  run.py  validation.py
examples/legacy/flood_replay_demo/documents/: downstream_industry_impact.txt  harvey_noaa_summary.txt
examples/legacy/forecast_demo/: extractor.py  node_geometries.json  output.json  run.py
examples/legacy/forecast_demo/documents/: beryl_port_energy_impact.txt
examples/legacy/toy_battery_demo/: README.md  battery_graph.json  expected_output.json  extractor.py  output.json  run.py
examples/legacy/toy_battery_demo/documents/: catl_supply_chain.txt  congo_cobalt_report.txt
examples/lineage_override_demo/: run.py
examples/quickstart_verification/: run.py
examples/toy_battery_demo/: extractor.py
examples/toy_battery_demo/documents/: tesla_10k_excerpt.txt
src/graphite/: __init__.py  cache.py  claim.py  claim_store.py  confidence.py  domain.py  enums.py  evidence.py  io.py  llm.py  rules.py  schemas.py  simulate.py  text.py
src/graphite/_archive/: README.md
src/graphite/_archive/entity_graph/: assembler.py  graph.py  io.py  scenario.py  simulate.py
src/graphite/adapters/: __init__.py  alphaearth.py  weathernext.py
src/graphite/eval/: __init__.py  runner.py  types.py
src/graphite/features/: alphaearth_enricher.py
src/graphite/geo_evidence/: __init__.py  geo_foundation.py
src/graphite/pipeline/: __init__.py  _client.py  analyzer.py  extractor.py  prompts.py  report.py  retriever.py  verdict.py  verifier.py
tests/: conftest.py  test_alphaearth.py  test_analyzer.py  test_cache.py  test_claim.py  test_claim_store.py  test_confidence.py  test_domain.py  test_enums.py  test_eval_runner.py  test_eval_types.py  test_evidence.py  test_extractor.py  test_init.py  test_llm.py  test_llm_client.py  test_pipeline_core.py  test_prompts.py  test_report.py  test_retriever.py  test_rules.py  test_scenario.py  test_schemas.py  test_text.py  test_verifier.py  test_weathernext.py
tests/fixtures/: weathernext_snapshot.json
(+11 files in other folders)
